# rsyslog

./: .clang-format  .codecov.yml  .codespellignore  .codespellrc  .cvsignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .lgtm.yml  .readthedocs.yaml  .shellcheck.yaml  .travis.yml  .vimrc  AGENTS.md  ANNOUNCE  AUTHORS  BUGS  BUILDS_README.md  CHANGES  CODE_OF_CONDUCT.md  COMMENTING_STYLE.md  CONTRIBUTING.md  COPYING  ChangeLog  DEVELOPING.md  IMFILE  INSTALL  KNOWN_ISSUES  MANIFEST  MODULE_AUTHOR_CHECKLIST.md  Makefile  Makefile.am  Makefile.in  NEWS  PR_DESCRIPTION.md  README  README.1st  README.AIX  README.AIX.IBM  README.linux  (+167 more)
contrib/impcap/: Makefile.am  arp_parser.c  dns_parser.c  eth_parser.c  ftp_parser.c  http_parser.c  icmp_parser.c  impcap.c  ipv4_parser.c  ipv6_parser.c  ipx_parser.c  llc_parser.c  parsers.h  smb_parser.c  tcp_parser.c  udp_parser.c
contrib/improg/: Makefile.am  README  README.md  improg.c
contrib/mmgrok/: Makefile.am  README  mmgrok.c
contrib/omamqp1/: Makefile.am  README.md  omamqp1.c
doc/: .gitignore  AGENTS.md  BUILDS_README.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  Makefile.am  README.md  STRATEGY.md  action-call.dot  action_state.dot  batch_state.dot  bugs.html  build_from_repo.html  build_rag_db.py  contributors.html  cryprov_gcry.html  debug.html  design.tex  dev_oplugins.html  dev_queue.html  droppriv.html  expression.html  features.html  free_support.html  generic_design.html  gfdl.html  global.html  gssapi.html  highperf.txt  history.html  how2help.html  im3195.html  imfile.html  imgssapi.html  imjournal.html  imklog.html  imkmsg.html  impstats.html  (+154 more)
doc/ai/: AGENTS.md  README.md  authoring_guidelines.md  chunking_and_embeddings.md  crosslinking_and_nav.md  drift_monitoring.md  mermaid_rules.md  module_map.yaml  security_triage_rubric.md  structure_and_paths.md  terminology.md
doc/ci/: validate_examples.py
doc/confsamples/: normalization.conf
doc/contrib/: README.md  cron_build_all_branches.sh
doc/security/: distro-component-package-map.json  distro-component-package-map.md  ghsa-coordination-review-template.md
doc/source/: community.rst  conf.py  conf_helpers.py  free_support.rst  getting_started.rst  history.rst  how2help.rst  idx_reference.rst  index.rst  licensing.rst
doc/src/: classes.dia  dataflow.dia  direct_queue0.dia  direct_queue1.dia  direct_queue2.dia  direct_queue3.dia  direct_queue_directq.dia  direct_queue_rsyslog.dia  direct_queue_rsyslog2.dia  module_workflow.dia  queueWorkerLogic.dia  queue_analogy_tv.dia  rfc5424layers.dia  rsyslog_pgsql.odt  rsyslog_queue_pointers.dia  rsyslog_queue_pointers2.dia  tls.dia  tls_cert.dia  tls_cert_100.dia  tls_cert_ca.dia
doc/tools/: build-doc-linux.sh  build-doc-windows.ps1  check-html-links.py  fix-mermaid-offline.py  inside_docker_doc_html.sh  pages-robots.txt  pages-root-index.html  release_build.sh  test_validate_doc_samples.py  validate-doc-samples.py
doc/utils/: release_build.sh
java/: Makefile.am
plugins/imdtls/: Makefile.am  imdtls.c
plugins/imfile/: Makefile.am  imfile.c  siphash.c
plugins/imjournal/: Makefile.am  dummy.c  imjournal.c  imjournal.h
plugins/imkafka/: AGENTS.md  MODULE_METADATA.yaml  Makefile.am  imkafka.c
plugins/imklog/: .cvsignore  Makefile.am  bsd.c  imklog.c  imklog.h  ksym.c  ksym_mod.c  ksyms.h  linux.c  module.h  solaris.c  solaris_cddl.c  solaris_cddl.h
plugins/immark/: .cvsignore  Makefile.am  immark.c  immark.h
plugins/impstats/: Makefile.am  README_PUSH.md  impstats.c  impstats_push.c  impstats_push.h  prometheus_remote_write.c  prometheus_remote_write.h  pygal-tooltips.js  remote.proto  statslog-analyzer.py  statslog-graph.py  statslog-splitter.py  statslog_regex.py  svg.jquery.js
plugins/imtcp/: Makefile.am  (+1 more)
runtime/: AGENTS.md  Makefile.am  action.c  action.h  apc.c  apc.h  atomic-posix-sem.c  atomic.h  batch.h  cfsysline.c  cfsysline.h  compat_queue.h  conf.c  conf.h  cryprov.h  ctok.c  ctok.h  ctok_token.c  ctok_token.h  datetime.c  datetime.h  debug.c  debug.h  dnscache.c  dnscache.h  dynstats.c  dynstats.h  errmsg.c  errmsg.h  expr.c  expr.h  glbl.c  glbl.h  gss-misc.c  gss-misc.h  gss-token-util.h  hash-impl.c  hash_impl.c  hash_impl.h  hashtable.c  (+196 more)
src/: Makefile.am  cclose.c  cmdif.h  copen.c  cserverclose.c  dbllinklist.h  librelp.h  offers.c  offers.h  relp.c  relp.h  relpclt.c  relpclt.h  relpframe.c  relpframe.h  relpsendq.c  relpsendq.h  relpsess.c  relpsess.h  relpsrv.c  relpsrv.h  scgo.c  scinit.c  scinit.h  scrsp.c  scsyslog.c  sendbuf.c  sendbuf.h  sendq.c  sendq.h  tcp.c  tcp.h
tests/: .gitignore  1.rstest  2.rstest  3.rstest  AGENTS.md  DEBUG_OMFWD_TEST_FAILURES.md  DevNull.cfgtest  DiagTalker.java  GeoIP2-City-Test.mmdb  Makefile.am  NoExistFile.cfgtest  README  abort-uncleancfg-badcfg-check.sh  abort-uncleancfg-badcfg-check_1.sh  abort-uncleancfg-continue-nop.sh  abort-uncleancfg-goodcfg-check.sh  abort-uncleancfg-goodcfg.sh  aborter.sh  action-duplicate-name.sh  action-ratelimit-drop.sh  action-ratelimit-pace.sh  action-ratelimit-reload.sh  action-ratelimit-validation.sh  action-tx-errfile-maxsize.sh  action-tx-errfile.sh  action-tx-single-processing.sh  allowed-sender-empty-array.sh  allowed-sender-modern.sh  allowed-sender-tcp-fail.sh  allowed-sender-tcp-hostname-fail.sh  allowed-sender-tcp-hostname-ok.sh  allowed-sender-tcp-ok.sh  allowed-sender-tcp-zero-mask.sh  allowed-sender-wildcard-invalid-bits.sh  analyze-omfwd-failure.sh  array_lookup_table-vg.sh  array_lookup_table.sh  array_lookup_table_misuse-vg.sh  arrayqueue.sh  asan.supp  (+2118 more)
tools/: AGENTS.md  MODULE_METADATA.json  Makefile.am  README.md  coreanalysis.sh  fuzz_rsyslog_message.c  gethostn.c  iminternal.c  iminternal.h  logctl.c  logsigner.c  msggen.c  omdiscard.c  omdiscard.h  omfile.c  omfile.h  omfwd.c  omfwd.h  ompipe.c  ompipe.h  omshell.c  omshell.h  omusrmsg.c  omusrmsg.h  pidfile.c  pmrfc3164.c  pmrfc3164.h  pmrfc5424.c  pmrfc5424.h  recover_qi.pl  regexp.c  release_build.sh  rscryutil.1  rscryutil.c  rscryutil.rst  rsgttlvdump.c  rsgtutil.c  rsgtutil.rst  rsksiutil.c  rsksiutil.rst  (+16 more)
(+4344 files in other folders)
